feat: implement relationships bind/unbind

--- a/core/access_control/.env.example
+++ b/core/access_control/.env.example
@@ -9,6 +9,7 @@ CLIENT_URL=http://localhost:5000
 ACCESS_POINT_API_URL=http://localhost:3000/api/v1
 
 # DATABASE
+BATCH_SIZE=100
 MONGO_URI=mongodb://localhost:27017
 MONGO_DEFAULT_DB=ClassPal  # Optional, default is APP_NAME value
 REDIS_URI=redis://localhost:6379
