feat: implement send invitation mail

--- a/core/communication/.env.example
+++ b/core/communication/.env.example
@@ -8,6 +8,10 @@ ORIGIN=http://localhost:3002
 CLIENT_URL=http://localhost:5000
 ACCESS_POINT_API_URL=http://localhost:3000/api/v1
 
+# LIMITS
+MAX_EMAILS_PER_DAY=50
+MAX_EMAILS_PER_REQUEST=15
+
 # GMAIL
 EMAIL=amrakk.dev@gmail.com
 EMAIL_PASS=
