--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -104,6 +104,29 @@ services:
     ##  SERVICES
     ###############################
 
+    academic_service:
+        build: ./applications/academic_service
+        expose:
+            - "3010"
+        environment:
+            - APP_NAME=${APP_NAME}
+            - APP_REGISTRY_KEY=${APP_REGISTRY_KEY}
+            - ENV=${ENV}
+            - ORIGIN=http://academic_service:3010
+            - CLIENT_URL=${PUBLIC_ORIGIN}
+            - REDIS_URI=redis://core_redis:6379
+            - MONGO_URI=mongodb://core_mongodb:27017/?replicaSet=rs0
+            - ACCESS_POINT_API_URL=http://access_point:3000/api/v1
+            - COMMUNICATION_API_URL=http://communication:3002/api/v1
+            - ACCESS_CONTROL_API_URL=http://access_control:3001/api/v1
+        env_file:
+            - ./applications/academic_service/.env
+        depends_on:
+            - access_point
+            - access_control
+        networks:
+            - server_network
+
 networks:
     server_network:
         driver: bridge
