--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -104,6 +104,28 @@ services:
     ##  SERVICES
     ###############################
 
+    service_mongodb:
+        build: ./core/mongodb
+        command: ["--replSet", "rs1", "--port", "27018"]
+        expose:
+            - "27018"
+        healthcheck:
+            test: echo "try { rs.status() } catch (err) { rs.initiate({_id:'rs1',members:[{_id:0,host:'service_mongodb:27018'}]}) }" | mongosh --port 27018 --quiet
+            interval: 5s
+            timeout: 30s
+            start_period: 0s
+            start_interval: 1s
+            retries: 30
+        networks:
+            - server_network
+
+    service_redis:
+        image: redis:7.4.0-alpine
+        expose:
+            - "6379"
+        networks:
+            - server_network
+
     academic_service:
         build: ./applications/academic_service
         expose:
@@ -114,8 +136,8 @@ services:
             - ENV=${ENV}
             - ORIGIN=http://academic_service:3010
             - CLIENT_URL=${PUBLIC_ORIGIN}
-            - REDIS_URI=redis://core_redis:6379
-            - MONGO_URI=mongodb://core_mongodb:27017/?replicaSet=rs0
+            - REDIS_URI=redis://service_redis:6379
+            - MONGO_URI=mongodb://service_mongodb:27018/?replicaSet=rs1
             - ACCESS_POINT_API_URL=http://access_point:3000/api/v1
             - COMMUNICATION_API_URL=http://communication:3002/api/v1
             - ACCESS_CONTROL_API_URL=http://access_control:3001/api/v1
