--- a/core/access_point/Dockerfile
+++ b/core/access_point/Dockerfile
@@ -21,7 +21,7 @@ COPY . .
 RUN bun run build
 
 # copy production dependencies and source code into final image
-FROM node:20.18-alpine AS release
+FROM node:20.18-slim AS release
 COPY --from=install /temp/prod/node_modules node_modules
 COPY --from=prerelease /usr/src/app/build/ ./src
 COPY --from=prerelease /usr/src/app/package.json .
