fix: correct CLIENT_URL and x-user-name value assignment

--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,5 @@ APP_NAME=ClassPal
 APP_REGISTRY_KEY=123456
 ENV=production
 PUBLIC_ORIGIN=https://example.com
+CLIENT_URL=http://localhost:5018
 PUBLIC_PORT=3000
